Fix images not showing up

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -106,80 +106,6 @@ a.nav-link.glyphicon.glyphicon-question-sign
     margin-right: 25px
     font-size: 25pt
 
-#legend
-    font-family: Arial, sans-serif
-    background: #fff
-    padding: 10px
-    margin: 10px
-    border: 3px solid #000
-    width: 150px
-    display: none
-
-#legend h3
-    margin-top: 0
-    font-size: 20pt
-
-
-#legend .color
-    float: left
-    width: 20px
-    height: 20px
-    opacity: 0.3
-    filter: alpha(opacity=50)
-
-#legend .text
-    color: gray
-    margin-left: 30px
-    font-size: 16pt
-    width: auto
-    height: 10px
-
-#legend_proc
-    font-family: Arial
-    background: #fff
-    padding: 10px
-    margin: 10px
-    border: 3px solid #000
-    width: 240px
-
-#legend_proc h3
-    margin-top: 0
-    font-size: 16pt
-
-
-#legend_proc .color
-    float: left
-    width: 20px
-    height: 20px
-    opacity: 0.8
-    filter: alpha(opacity=100)
-
-#legend_proc .text
-    color: gray
-    margin-left: 30px
-    font-size: 12pt
-    width: auto
-    height: 10px
-
-#dashboard_legend
-    border: 2px solid black
-    position: fixed
-    right: 0
-    top: 50%
-    width: 25em
-    margin-top: 21.5em
-    background-color: white
-
-#dashboard_legend .glyphicon
-    margin-left:  25px
-    margin-right:  25px
-
-#dashboard_legend .dashboard-header
-    background: lightgray
-    border-bottom: 2px solid white
-    border-top: 2px solid
-    cursor: pointer
-
 .navbar-inverse .navbar-nav > li > a
     color: white
 
@@ -200,33 +126,6 @@ a.nav-link.glyphicon.glyphicon-question-sign
     color: #cdcdcd
     width: 100%
 
-#distance-legend
-    height:  50px
-
-#distance-legend .color,
-    float: left
-    height: 20px
-    width: 20px
-    border-style: double
-
-#distance-legend .item
-    margin-bottom: -7px
-
-#distance-legend .text
-    margin-left: 30px
-
-#distance-legend .color.lt-1km
-    background-color: green
-
-#distance-legend .color.lg-1km-lt-5
-    background-color: yellow
-
-#distance-legend .color.lg-5km-lt-10
-    background-color: orange
-
-#distance-legend .color.lg-10km
-    background-color: red
-
 #metric-board
     width: 100%
     height: 35%
@@ -245,20 +144,6 @@ a.nav-link.glyphicon.glyphicon-question-sign
     position: absolute
     bottom: 0
     height: 32%
-
-#dashboard_legend .list
-    list-style: none
-    display: block
-
-#dashboard_legend .list li
-    margin-right: 10px
-
-#dashboard_legend .list span
-    border: 1px solid #ccc
-    float: left
-    width: 12px
-    height: 12px
-    margin: 2px
 
 .w3-card-4
     margin-top: 30px
